# pydash

./: .gitignore  .hello.c.swp  LICENSE  PREPROCESSOR.md  README.md  big-five-factors.md  big-five.md  design-decisions.md  fifth-wave-essay.md  golden_path.py  hello (Copy).pyl  hello.py  hello.pyd  hello.pyl  hello_c.py  hello_c.pyl  keywords-added.md  llm-native-language.md  multi_tool.py  pyproject.toml  session-ses_2811.md  session-summary.md  shift-oop.md  socrates.pyd  structured_tool.py  surface-area.md  syntax.md  the-plumbing-cycle.md  tool_demo.py  tool_demo.pyl  transpiler.py  with_tool.py  with_tool.pyl
src/: transpiler.py
src/pydash/: __init__.py  __main__.py  transpiler.py
