[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydash"
version = "0.1.0"
description = "A syntax preprocessor for Python. One em-dash absorbs the boilerplate of LLM inference."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["ollama"]

[project.scripts]
pydash = "pydash.transpiler:main"

[tool.setuptools.packages.find]
where = ["src"]
